tests/resource/valid/definition/assign_with_if_different_types.mamba
class MyClass
    def __str__(self) -> Str => "M"

def a := if True then 20 else MyClass()

print(a)
