tests/resource/invalid/type/control_flow/class_field_assigned_to_only_else.mamba
class MyClass
    def x: Int

    def __init__(self) =>
        if False then
            print("something")
        else
            self.x := 10
